--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ input[type="submit"] {
     transform:translateX(-80%);
     
 }
-
+/* responsive */
 @media only screen and (max-width: 375px) {
     #description{
         font-size: 16px;
